--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
-    "use-scroll-position": "0.0.4",
+    "use-scroll-position": "^0.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
